--- a/index.html
+++ b/index.html
@@ -33,44 +33,60 @@
                     </div>
                     <div class="cb-content">
                         <h4>Трэволюция</h4>
-                        <p>Письмо для конференции 2019 года.</p>
+                        <p>Письмо для конференции 2019 года</p>
                     </div>
                     <a href="samples/trevolution.html" class="cb-link" target="_blank">Смотреть</a>
                 </div>
-
                 <div class="carousel-block">
                     <div class="cb-image" style="background: #E6FAFF;">
                         <img src="images/review.svg" alt="">
                     </div>
                     <div class="cb-content">
                         <h4>ФИТ</h4>
-                        <p>Письмо для особого предложения туроператора.</p>
+                        <p>Письмо для особого предложения</p>
                     </div>
                     <a href="samples/fit.html" class="cb-link" target="_blank">Смотреть</a>
                 </div>
-
+                <div class="carousel-block">
+                    <div class="cb-image" style="background: #E6FAFF;">
+                        <img src="images/review.svg" alt="">
+                    </div>
+                    <div class="cb-content">
+                        <h4>ФИТ2</h4>
+                        <p>Письмо для особого предложения</p>
+                    </div>
+                    <a href="samples/fit2.html" class="cb-link" target="_blank">Смотреть</a>
+                </div>
                 <div class="carousel-block">
                     <div class="cb-image" style="background: #E6FAFF;">
                         <img src="images/task.svg" alt="">
                     </div>
                     <div class="cb-content">
                         <h4>Адаптивный</h4>
-                        <p>Не табличный шаблон письма.</p>
+                        <p>Не табличный шаблон письма</p>
                     </div>
                     <a href="samples/adaptive.html" class="cb-link" target="_blank">Смотреть</a>
                 </div>
-
                 <div class="carousel-block">
                     <div class="cb-image" style="background: #E6FAFF;">
                         <img src="images/sale.svg" alt="">
                     </div>
                     <div class="cb-content">
                         <h4>Скидка</h4>
-                        <p>Информ.письмо</p>
+                        <p>Информационное<br>письмо</p>
                     </div>
                     <a href="samples/sale.html" class="cb-link" target="_blank">Смотреть</a>
                 </div>
-
+                <div class="carousel-block">
+                    <div class="cb-image" style="background: #E6FAFF;">
+                        <img src="images/kazakhstan.svg" alt="">
+                    </div>
+                    <div class="cb-content">
+                        <h4>Onex</h4>
+                        <p>Промо письма для Казахстана</p>
+                    </div>
+                    <a href="samples/onex.html" class="cb-link" target="_blank">Смотреть</a>
+                </div>
             </div>
         </div>
     </div>
